--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Tarea_Corta_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Tarea_Corta_1 main.cpp Vehiculo.cpp Vehiculo.h Fabrica.cpp Fabrica.h)
+add_executable(Tarea_Corta_1 main.cpp Vehiculo.cpp Vehiculo.h Fabrica.cpp Fabrica.h List.cpp List.h Collector.cpp Collector.h Node.cpp Node.h)
